# supabase-realtime-rs

./: Cargo.toml  LICENSE  README.md  create.sh  docker-compose.yaml
dev/postgres/: 00-setup.sql
examples/: demo.rs
src/: channel.rs  client.rs  filter.rs  lib.rs  protocol.rs
