[package]
name = "supabase-realtime"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tungstenite = "0.19.0"
url = "2.4.0"

[dev-dependencies]
serde_test = "1.0.174"
