[package]
name = "supabase-realtime"
version = "0.1.0"
authors = ["Liam Kinne <liam@kinne.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/liamkinne/supabase-realtime-rs"
readme = "README.md"

[dependencies]
futures = "0.3.28"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt", "macros", "sync"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tracing = "0.1.41"
url = "2.4.0"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde_test = "1.0.174"
tracing-subscriber = "0.3.19"
